--- a/stilos.css
+++ b/stilos.css
@@ -13,7 +13,7 @@ body{
 header{
 margin-top: 2%;
 display: flex;
-flex-wrap: wrap;
+justify-content: space-evenly;
 }
 a{
 text-decoration: none;
@@ -25,9 +25,9 @@ text-decoration: none;
   background-repeat: no-repeat;
   cursor: pointer;
   border:none;
-  min-width: 300px;
+  min-width: 200px;
   max-width: 80%;
-  min-height: 300px;
+  min-height: 200px;
   max-height: 70%;
   font-weight: bold;
   border-radius: 12px;
@@ -40,21 +40,21 @@ display: flex;
   background-color: black;
   color: white;
   text-decoration: none;
-  text-transform: uppercase;   
+  text-transform: uppercase;
+  margin-right: 20%;    
   justify-content: space-between;
   align-items: center;
   margin-top: 1%;
   float: right;
   min-height: fit-content;
-  height: 100%;
-  padding: 0%;
-  margin-left: 14%;
+  height: 104%;
 }   
 .navbar ul{
 display: flex;
 justify-content: space-around;
 list-style-type: none;
 word-break: keep-all;
+margin-left: 40%;
 }
 .navbar li{
  margin: 0% 4%;
@@ -129,20 +129,61 @@ margin-top: 2%;
   flex-wrap: wrap;
   margin-left: 4%;
 }
+@media (max-width: 768px) {
+  #l {
+    font-size: 140%; 
+    margin-left: 2%; 
+  }
+}
 
-.soli{
-margin-top: -12%;
-  opacity: 90%;
+@media (max-width: 480px) {
+  #l {
+    font-size: 120%; 
+    margin-left: 1%;
+    text-align: center;
+  }
+}
+
+.soli {
+  margin-top: -20%;
+  opacity: 0.9; 
   margin-right: 2%;
-  height: 200%;
-  padding: 5%;
+  height: auto; 
+  padding: 10%;
   background-image: url("IMG/FONDO.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   float: right;
+  display: flex;
   justify-content: center;
+  align-items: center;
   position: relative;
   z-index: 1;
+}
+
+
+@media (max-width: 1024px) {
+  .soli{
+    margin-top: -10%; 
+    padding: 5%; /* Ajusta el relleno */
+    height: 100vh; /* Usa toda la altura de la pantalla */
+    float: none; /* Evita que flote en pantallas más pequeñas */
+  }
+}
+
+/* Ajustes para pantallas pequeñas (móviles) */
+@media (max-width: 768px) {
+  .soli {
+    margin-top: 0; /* Elimina margen negativo */
+    margin-right: 0;
+    padding: 5%;
+    height: auto;
+    background-size: contain; /* Evita recortes en la imagen */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 }
 .dentro{
   float: right;
@@ -175,6 +216,7 @@ color: white;
 }
 .seccion2{
 flex-wrap: wrap;
+justify-content: space-evenly;
 margin-top: 15%;
 }
 .fos {
@@ -185,16 +227,16 @@ width: 100%;
 height: 100%;
 margin-top: 5%;
 margin-left: 12%;
-padding: 3.6%; /* Remueve cualquier padding adicional */
+padding: 3.6%; 
 padding-right: 20%;
-display: flex; /* Usar flex para alinear los elementos */
-justify-content: center; /* Centra horizontalmente */
-align-items: center; /* Centra verticalmente */
+display: flex; 
+justify-content: center;
+align-items: center; 
 }
 
 .foro {
 width: 90%;
-height: auto; /* Ajusta la altura automáticamente manteniendo la proporción */
+height: auto; 
 border-radius: 0%;
 margin-top: -1%;
 margin-left: 1%;
@@ -202,12 +244,12 @@ margin-left: 1%;
 
 .seccion3 {
 width: 100%;
-height: 100%; /* Asegura que ocupa toda la altura de la pantalla */
-margin-top: 10%; /* Remueve cualquier margen adicional */
-padding: 0; /* Remueve cualquier padding adicional */
-display: flex; /* Usar flex para alinear los elementos */
-justify-content: center; /* Centra horizontalmente */
-align-items: center; /* Centra verticalmente */
+height: 100%; 
+margin-top: 10%; 
+padding: 0; 
+display: flex; 
+justify-content: center; 
+align-items: center; 
 }
 
 /* fin de primera pagina  */
@@ -219,7 +261,7 @@ background-repeat: no-repeat;
 background-size: cover;
 padding: 1%;
 color: white; 
-width: 40%; /* Ajustar el tamaño */
+width: 40%; 
 min-width: 250px;
 height: fit-content;
 float: left;
@@ -233,44 +275,79 @@ background-size: contain;
 display: flex;
 margin-top: 10%;
 justify-items: center;
-background-color: #000; /* Fondo oscuro */
-width: 40%; /* Ajustar el tamaño */
-box-sizing: border-box; /* Incluye el padding en el ancho */
+background-color: #000;
+width: 40%;
+box-sizing: border-box; 
 margin-left: 4%;
 float: right;
 }
 
 .pc1 {
-background-image: url("IMG/pc1.jpeg");
-width: 100%;
-background-repeat: no-repeat;
-background-size: contain;
-height: 100%;
-margin-left: 8%;
-margin-right: 9.5%;
-margin-top: 1%;
-border-radius: 10%;
-opacity: 0.6; /* Opacidad ajustada / / Ajustar imagen al contenedor */
+  background-image: url("IMG/pc1.jpeg");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: auto; 
+  margin-left: 8%;
+  margin-right: 9.5%;
+  margin-top: 1%;
+  border-radius: 10%;
+  opacity: 0.6;
 }
 
+/* Sección para organizar los elementos en flexbox */
 .seccion4 {
-display: flex;
-justify-content: space-around;
-margin-top: 2%;
-width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap; 
+  margin-top: 2%;
+  width: 100%;
+}
+
+/* Ajustes para pantallas medianas (tablets) */
+@media (max-width: 1024px) {
+  .pc1 {
+    margin-left: 5%;
+    margin-right: 5%;
+    background-size: cover;
+  }
+}
+
+/* Ajustes para pantallas pequeñas (móviles) */
+@media (max-width: 768px) {
+  .pc1 {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5%;
+  }
+
+  .seccion4 {
+    flex-direction: column; 
+    align-items: center; 
+  }
+}
+
+/* Ajustes para pantallas muy pequeñas */
+@media (max-width: 480px) {
+  .pc1 {
+    width: 95%;
+    background-size: cover;
+    border-radius: 3%;
+    opacity: 0.8;
+  }
 }
 
 .alinear{
   display: flex;
   justify-content: space-evenly;
-  width: 98%;
 
 }
 #orden{
   list-style-type: none;
   justify-content: space-around;
   justify-items: center;
-  margin-left: 0%;
+  margin-left: 20%;
 }
 .c1{
  
@@ -317,9 +394,7 @@ width: 100%;
       width: 100%;
       height: 200pt;
   }
-  .alinear{
-    width: 25%;
-  }
+
 }
 @media(max-width: 500px){
 #orden{
@@ -424,7 +499,7 @@ width: 100%;
   margin-left: -14%;
 }
 .mis{
-  margin-top: 80pt;
+  margin-top: 40pt;
 }
 .music{
   width: 67%;
@@ -457,16 +532,32 @@ width: 100%;
 /* imagenes */
 
 
+@media (max-width: 700px){
+  .c5{
+    width: 130%;
+    flex-wrap: wrap;
+  }
+  .c6{
+    flex-wrap: wrap;
+    width: 130%;
+    height: fit-content;
+  
+  }
+ 
+  .seccion6{
+    flex-wrap:wrap;
+    flex-direction: column;
 
+  }
+}
 .c5{
-  width: 32%;
+  width: 97%;
   height: 100%;
   background-image: url("IMG/tabla1.jpg");
   padding-top: 2%;
   padding-left: 1%;
   background-repeat: no-repeat;
   float: left;
-  margin-top: 25%;
   margin-left: 2%;
 
 }
@@ -475,12 +566,13 @@ width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   height: auto;
-  width: 32%;
+  width: 90%;
   float: right;
   margin-top: 7%;
   justify-items: center;
   z-index: 2;
   background-color: none;
+  margin-left: -2%;
 }
 .plao{
   background-image: url("IMG/FOT.jpg");
@@ -494,7 +586,7 @@ width: 100%;
 }
 
 .c6{
-  width: 32%;
+  width: 97%;
   height: fit-content;
   background-image: url("IMG/tabla1.jpg");
   padding-top: 2% ;
@@ -504,35 +596,35 @@ width: 100%;
   z-index: 1;
   margin-top: -5%;
 }
-@media (max-width: 700px){
-  .c5{
-    width: 95%;
-    flex-wrap: wrap;
-  }
-  .c6{
-    flex-wrap: wrap;
-    width: 95%;
-    height: fit-content;
-  
-  }
-  .cell{
-    height: auto;
-    width: 95%;
-    float: right;
-  }
-  .seccion6{
-    flex-wrap:wrap;
-    flex-direction: column;
-
-  }
-}
-.seccion6{
-display: flex;
+.seccion6 {
+  display: flex;
   justify-content: space-between;
-  margin-top: 6%;
-  width: 100%;
+  align-items: center; 
   min-height: fit-content;
+  gap: 20px; 
+  padding: 0 5%; 
+  max-width: 1200px; 
+ 
 }
+
+
+@media (max-width: 1024px) {
+  .seccion6 {
+    justify-content: center; 
+    gap: 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  .seccion6 {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3%; 
+    gap: 12px; 
+    padding: 0 3%; 
+  }
+}
+
 .flow{
   height: fit-content;
   background: linear-gradient(#000000, #2B2B2B);
@@ -569,7 +661,7 @@ display: flex;
 align-items: center;
 width: 100%;
 border-top: 2px solid #fff;
-margin-top: 2%;
+margin-top: 4%;
 }
 
 footer .container {
