--- a/stilos.css
+++ b/stilos.css
@@ -137,6 +137,8 @@ padding-top: 5%;
 
 }
 #amb{
+  justify-content: center;
+  display: flex;
   font-family: tit;
 }
 #titul{
@@ -244,6 +246,7 @@ margin-left: 8%;
   font-size: 20px;
 }
 .animated-button {
+  margin-top: 5%;
   position: relative;
   display: flex;
   align-items: center;
