--- a/stilos.css
+++ b/stilos.css
@@ -148,7 +148,7 @@ margin-top: 5%;
 margin-left: 8%;
 }
 #titulo{
-
+text-align:center;
   font-size: 400%;
   font-family: tit;
   max-width: fit-content;
