--- a/stilos.css
+++ b/stilos.css
@@ -563,7 +563,9 @@ float: right;
     width: 100%;
 }
 .mis{
-    width: 100%;
+  width: 100%;
+  display:flex;
+  justify-content:center;
 }
 .music{
     width: 100%;
