--- a/ilos.css
+++ b/ilos.css
@@ -19,6 +19,8 @@
   background-color: rgb(55, 53, 53);
   border-radius: 10%;
   text-align: center;
+  display: table-row;
+
 }
 .opi{
   height: 90pt;
