--- a/ilos.css
+++ b/ilos.css
@@ -4,6 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color:white;
+  text-decoration:none;
   
 }
 
@@ -263,12 +265,12 @@ h2{
 
 footer {
   display: flex;
+  margin-top: 2%;
   align-items: center;
   width: 100%;
   border-top: 2px solid #fff;
-  
+  background-color: black;
 }
-
 
 footer .container {
   padding: 1rem;
@@ -328,17 +330,13 @@ footer .container .profile .social-media-container {
   display: flex;
   gap: 8px;
 }
-i{
-  margin-left: 20%;
-  margin-top: 45%;
-}
 
 footer .container .profile .social-media-container .social-media {
   cursor: pointer;
-  width: 45px;
-  height: 45px;
+  width: 35px;
+  height: 35px;
+  padding: 9px;
   border-radius: 50%;
-  color: #fff;
   background-color: #2f2f2f;
   transition: transform 1s linear;
 }
@@ -453,245 +451,16 @@ footer .container .link-container .navigation ul li a {
   footer .container .link-container .navigation {
     width: 50%;
   }
-  i{
-    margin-left: 20%;
-    margin-top: 45%;
-  }
 }
-.copy{
-  color: white;
-}
-
-button {
-
-  background: transparent;
-  position: relative;
-  padding: 5px 15px;
-  display: flex;
-  align-items: center;
-  font-size: 17px;
-  font-weight: 600;
-  text-decoration: none;
-  cursor: pointer;
-  border: 1px solid rgb(255, 253, 253);
-  border-radius: 25px;
-  outline: none;
-  overflow: hidden;
-  color: rgb(255, 255, 255);
-  transition: color 0.3s 0.1s ease-out;
-  text-align: center;
-}
-
-button span {
-  margin: 10px;
-}
-
-button::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  content: "";
-  border-radius: 50%;
-  display: block;
-  width: 20em;
-  height: 20em;
-  left: -5em;
-  text-align: center;
-  transition: box-shadow 0.5s ease-out;
-  z-index: -1;
-}
-
-button:hover {
-  color: #fff;
-  border: 1px solid rgb(239, 103, 128);
-}
-
-button:hover::before {
-  box-shadow: inset 0 0 0 10em rgb(150, 150, 150);
+i{
+  margin-left: 20%;
+  margin-top: 45%;
 }
 
 
-.button{
-  background-color: gray;
-  color:white;
-  border-radius: 10pt;
-  text-transform: uppercase;
-  z-index: 2;
-  font-size: 20px;
-}
-.animated-button {
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  padding: 16px 36px;
-  border: 4px solid;
-  border-color: transparent;
-  font-size: 16px;
-  background-color: inherit;
-  border-radius: 100px;
-  font-weight: 600;
-  color: greenyellow;
-  box-shadow: 0 0 0 2px #6a7061;
-  cursor: pointer;
-  overflow: hidden;
-  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.animated-button svg {
-  position: absolute;
-  width: 24px;
-  fill: greenyellow;
-  z-index: 9;
-  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.animated-button .arr-1 {
-  right: 16px;
-}
-
-.animated-button .arr-2 {
-  left: -25%;
-}
-
-.animated-button .circle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 20px;
-  height: 20px;
-  background-color: rgb(255, 130, 47);
-  border-radius: 50%;
-  opacity: 0;
-  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.animated-button .text {
-  position: relative;
-  z-index: 1;
-  transform: translateX(-12px);
-  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.animated-button:hover {
-  box-shadow: 0 0 0 12px transparent;
-  color: #212121;
-  border-radius: 12px;
-}
-
-.animated-button:hover .arr-1 {
-  right: -25%;
-}
-
-.animated-button:hover .arr-2 {
-  left: 16px;
-}
-
-.animated-button:hover .text {
-  transform: translateX(12px);
-}
-
-.animated-button:hover svg {
-  fill: #212121;
-}
-
-.animated-button:active {
-  scale: 0.95;
-  box-shadow: 0 0 0 4px rgb(98, 28, 14);
-}
-
-.animated-button:hover .circle {
-  width: 220px;
-  height: 220px;
-  opacity: 1;
-
-}
 
 
-.sign {
-  width: 100%;
-  transition-duration: 0.3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
-.sign svg {
-  width: 25px;
-}
-
-.sign svg path {
-  fill: white;
-}
-.text {
-  position: absolute;
-  right: 0%;
-  width: 0%;
-  opacity: 0;
-  color: white;
-  font-size: 1em;
-  font-weight: 600;
-  transition-duration: 0.3s;
-}
-
-.Btn {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  width: 45px;
-  height: 45px;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition-duration: 0.3s;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-  background-color: #00d757;
-}
-
-.sign {
-  width: 100%;
-  transition-duration: 0.3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.sign svg {
-  width: 25px;
-}
-
-.sign svg path {
-  fill: white;
-}
-
-
-.Btn:hover {
-  width: 150px;
-  border-radius: 40px;
-  transition-duration: 0.3s;
-}
-
-.Btn:hover .sign {
-  width: 30%;
-  transition-duration: 0.3s;
-  padding-left: 10px;
-}
-
-.Btn:hover .text {
-  opacity: 1;
-  width: 70%;
-  transition-duration: 0.3s;
-  padding-right: 10px;
-}
-.Btn:active {
-  transform: translate(2px, 2px);
-}
 .Btn {
   display: flex;
   align-items: center;
@@ -759,6 +528,8 @@ button:hover::before {
 
 
 button {
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
   background: transparent;
   position: relative;
   padding: 5px 15px;
