--- a/ilos.css
+++ b/ilos.css
@@ -502,6 +502,7 @@ i{
   font-size: 1.2em;
   font-weight: 600;
   transition-duration: 0.3s;
+   background-color: #00d757;
 }
 
 .Btn:hover {
@@ -577,3 +578,4 @@ button:hover {
 button:hover::before {
   box-shadow: inset 0 0 0 10em black;
 }
+
