--- a/estilitos.css
+++ b/estilitos.css
@@ -1,7 +1,8 @@
-/* Estilos Globales */
 * {
   background-color: #000000;
   box-sizing: border-box;
+  color: white;
+  text-decoration: none;
   margin: 0;
   padding: 0;
 }
@@ -569,4 +570,25 @@ button:hover::before {
 }
 .Btn:active {
   transform: translate(2px, 2px);
+}
+button:hover{
+  background-color: #000000;
+}
+button:hover.Btn{
+  background-color: #00d757;
+}
+.sign svg {
+  width: 25px;
+  background: #00d757;
+}
+.text {
+  position: absolute;
+  right: 0%;
+  width: 0%;
+  opacity: 0;
+  color: white;
+  font-size: 1.2em;
+  font-weight: 600;
+  transition-duration: 0.3s;
+  background-color:#00d757;
 }
