--- a/ilos.css
+++ b/ilos.css
@@ -613,8 +613,8 @@ button:hover.Btn{
         .boton-flotante:hover {
             transform: scale(1.1);
         }
-        .boton-flotante img {
+         .boton-flotante img {
             width: 40px; 
-            height: 40px;
-           background-color: #25d366;
-        }
+            height:40px;
+            background-color: #25D366;
+         }
