--- a/estilitos.css
+++ b/estilitos.css
@@ -619,4 +619,5 @@ button:hover.Btn{
         .boton-flotante img {
             width: 40px; 
             height: 40px;
+            background-color: #25D366;
         }
