--- a/tilos.css
+++ b/tilos.css
@@ -752,9 +752,11 @@ button:hover::before {
         .boton-flotante:hover {
             transform: scale(1.1);
         }
+
         .boton-flotante img {
-            width: 40px; /* Ajusta el tamaño del icono según sea necesario */
-            height: 40px;
-        }
+            width: 40px; 
+            height:40px;
+            background-color: #25D366;
+}
 
 
