--- a/tilos.css
+++ b/tilos.css
@@ -105,10 +105,10 @@
   }
 }
 
-/* slider */
+/* slider fin */
 
 .container {
-  max-width: 800px;
+ 
   margin: 0 auto;
   position: relative;
   border-radius: 15px;
