--- a/tilos.css
+++ b/tilos.css
@@ -105,7 +105,72 @@
   }
 }
 
-/* slider fin */
+/* slider */
+
+.centrar {
+  overflow: hidden;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+}
+
+/* Contenedor del carrusel */
+.carousel-container {
+  position: relative;
+  width: 100%;
+}
+
+/* Estilos del carrusel */
+.carousel {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+/* Cada elemento del carrusel */
+.carousel-item {
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Imágenes del slider */
+.carousel-item img {
+  width: 100%;
+  max-width: 800px;
+  height: auto;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px; /* Espacio entre imagen y texto */
+}
+
+/* Texto del slider */
+.carousel-text {
+  font-size: 1.5rem;
+  background-color: #f5f5f5;
+  color: #333;
+  padding: 10px 15px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  max-width: 90%;
+  text-align: center;
+}
+
+/* RESPONSIVE slider */
+@media (max-width: 768px) {
+  .carousel-text {
+    font-size: 1.2rem;
+    padding: 8px 12px;
+  }
+}
+
+@media (max-width: 480px) {
+  .carousel-text {
+    font-size: 1rem;
+    padding: 5px 10px;
+  }
+}
 
 .container {
  
